# dot-claude

./: .editorconfig  .gitignore  CLAUDE.md  README.md  pyproject.toml  todos.md
claude/: CLAUDE.md
claude/.claude/: CLAUDE.md
claude/.claude/commands/: commit.md
claude/.claude/skills/backend-dev/: SKILL.md
claude/.claude/skills/pm/: SKILL.md
claude/skills/creating-todo/: SKILL.md
claude/skills/git-commit/: SKILL.md
my-skills/assistant/: SKILL.md
my-skills/assistant/references/: daily-report-guide.md
my-skills/creating-todo/: SKILL.md
my-skills/git-commit/: SKILL.md
my-skills/leading-change/: SKILL.md
my-skills/obsidian-notes/: SKILL.md
my-skills/obsidian-notes/assets/: meeting.md
my-skills/obsidian-notes/evals/: evals.json
my-skills/obsidian-notes/references/: project-workflow.md
my-skills/writing-note/: SKILL.md
my-skills/writing-note/assets/: project.md
my-skills/writing-note/references/: error-handling.md  meeting-workflow.md  note-organization.md  project-workflow.md  tool-selection.md
openspec/: config.yaml
openspec/changes/cli-package-manager/: design.md  proposal.md  tasks.md
openspec/specs/artifact-deployment/: spec.md
openspec/specs/cli-commands/: spec.md
openspec/specs/config-management/: spec.md
openspec/specs/deployment/: spec.md
openspec/specs/repo-management/: spec.md
openspec/specs/scope-selection/: spec.md
scripts/: deploy.py
src/dot_claude/: __init__.py  cli.py  config.py  deploy.py  installer.py  inventory.py  manifest.py  repos.py  tui.py
src/dot_claude/claude/: CLAUDE.md
tests/: test_cli.py  test_config.py  test_deploy.py  test_installer.py  test_inventory.py  test_manifest.py  test_package_data.py  test_repos.py  test_tui.py
(+34 files in other folders)
