[project]
name = "dot-claude"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pyyaml>=6.0.3"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.8.0"]

[project.scripts]
deploy = "scripts.deploy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py313"
line-length = 100
