[project]
name = "dot-claude"
version = "0.1.0"
description = "CLI tool for managing Claude Code skills and agents artifacts"
authors = [
    { name = "Dustin Liu", email = "liu.minlun@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "inquirerpy>=0.3.4",
]

[project.scripts]
dot-claude = "dot_claude.cli:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
